chaos-engineering-with-chaostoolkit/manifests/back-end-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-app
  labels:
    app: flask-api-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api-app
  template:
    metadata:
      labels:
        app: flask-api-app
    spec:
      containers:
        - name: flask-api-app
          image: cloudwithdd/flaskapis
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  selector:
    app: flask-api-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 5000
