chaos-engineering-with-chaostoolkit/manifests/front-end-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-web-app
  labels:
    app: react-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-web-app
  template:
    metadata:
      labels:
        app: react-web-app
    spec:
      containers:
        - name: react-web-app
          image: cloudwithdd/reactwebapp
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-web-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
