chaos-engineering-with-chaostoolkit/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-api-service
                port:
                  number: 81
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 81
